--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@400;600;700&display=swap');
 @import "tailwindcss";
+
+body {
+  font-family: 'Barlow', sans-serif;
+}
 .navbar {
   background: linear-gradient(to right, #e23b58, #5b437a, #1f3c63);
 }
@@ -13,7 +18,6 @@
 }
 .tilt-box-wrap:hover {
   transition: all 0.3s linear;
-  /* transform: scale(1.1); */
 }
 .tilt-box {
   width: 100%;
@@ -23,8 +27,6 @@
   color: #fff;
   transition: all 0.6s ease-out;
   transform: rotateX(0deg) rotateY(0deg);
-  /* perspective: 1000px; */
-  /* transform-style: preserve-3d; */
 }
 
 .logo:hover {
@@ -60,8 +62,9 @@
   color: #ffffff; /* White text for dark backgrounds */
     line-height: 1.5;
   background-color: transparent;
-  border: 1px solid lightgray;
-  border-radius: 10px;
+  box-shadow: 0 0 2px 0 rgba(145 158 171 / 0.2), 0 12px 24px -4px rgba(145 158 171 / 0.12);
+  /* border: 1px solid lightgray; */
+  border-radius: 20px;
 
 }
 
