--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,7 @@ body {
 .card1 {
   color: #ffffff; /* White text for dark backgrounds */
     line-height: 1.5;
-  background-color: transparent;
+  background-color: white;
   box-shadow: 0 0 2px 0 rgba(145 158 171 / 0.2), 0 12px 24px -4px rgba(145 158 171 / 0.12);
   /* border: 1px solid lightgray; */
   border-radius: 20px;
